--- a/Info.plist
+++ b/Info.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
@@ -16,6 +16,10 @@
 	<string>BNDL</string>
 	<key>CFBundleVersion</key>
 	<string>5E</string>
+	<key>CFBundleDisplayName</key>
+	<string>Image Manipulation Actions</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0.0</string>
 	<key>QSActions</key>
 	<dict>
 		<key>QSImageAsFormatAction</key>
@@ -49,8 +53,12 @@
 			<true/>
 			<key>name</key>
 			<string>Crop Image</string>
+			<key>hidden</key>
+			<string>YES</string>
 			<key>validatesObjects</key>
 			<true/>
+			<key>enabled</key>
+			<string>NO</string>
 		</dict>
 		<key>QSImageScaleAction</key>
 		<dict>
@@ -81,7 +89,37 @@
 		<key>description</key>
 		<string>Actions to scale and change format of images</string>
 		<key>extendedDescription</key>
-		<string>Actions to scale and change format of images&lt;p&gt;use the "scale image" action and give it text in the form:&lt;br&gt;"SCALE_INFO [as FORMAT_INFO]"&lt;br&gt;SCALE_INFO: "[fit] WIDTH [x HEIGHT]"&lt;br&gt;FORMAT_INFO: "JPG/PNG/GIF/TIFF [low/med*/hi*] [prog(ressive)] [inter(laced)]"&lt;p&gt;Examples:&lt;br&gt;"fit 640x480 as jpg high progressive" - creates an image that will fit within a 640x480 rectangle&lt;br&gt;"50% as interlaced png" - creates a png with dimensions half of the original"&lt;br&gt;"x72 as gif" - makes a gif 72 pixels tall, with width to maintain the proportions</string>
+		<string>&lt;h3&gt;Overview&lt;/h3&gt;
+&lt;p&gt;Actions to scale, change the format of images. Both actions take an argument in Quicksilver&apos;s 3rd pane. Examples can be seen below.&lt;/p&gt;
+
+&lt;h3&gt;Actions&lt;/h3&gt;
+
+&lt;h4&gt;Scale Image...&lt;/h4&gt;
+&lt;p&gt;This method allows you to scale an image selected in Quicksilver&apos;s 1st pane. Various scaling and formation options are available, and are listed below.&lt;/p&gt;
+
+&lt;p&gt;The basic format for the string is (terms in square brackets are optional):&lt;br /&gt;
+&lt;code&gt;SCALING_INFORMATION [as FORMATTING_INFORMATION]&lt;/code&gt;&lt;/p&gt;
+&lt;p&gt;where &lt;code&gt;SCALING_INFORMATION&lt;/code&gt; has the format:
+&lt;br /&gt;
+&lt;code&gt;[fit] WIDTH [x HEIGHT]&lt;/code&gt; with &lt;code&gt;WIDTH&lt;/code&gt; and &lt;code&gt;HEIGHT&lt;/code&gt; defined as whole numbers in terms of pixels. For example, 210 means 210px, but it is also possible to type 210px.&lt;/p&gt;
+
+&lt;p&gt;&lt;code&gt;FORMATTING_INFORMATION&lt;/code&gt; has the format:&lt;br /&gt;
+&lt;code&gt;JPG/PNG/GIF/TIFF [low/med/hi] [prog(ressive)] [inter(laced)]&lt;/code&gt; which allows you to set the file type, quality of the image and various further options (progressive for .jpg files and interlaced for .png files).&lt;/p&gt;
+
+
+&lt;p&gt;Examples:&lt;/p&gt;
+
+&lt;ul&gt;
+&lt;li&gt;&lt;code&gt;80%&lt;/code&gt; - scales an image to 80% of the original image, keeping the same file format as the input image&lt;/li&gt;
+&lt;li&gt;&lt;code&gt;500px x 50px&lt;/code&gt; - scales the image to be 500px in width by 50px in height. The format is kept the same as the original&lt;/li&gt;
+&lt;li&gt;&lt;code&gt;x200 as gif&lt;/code&gt; - scales the image to be 200px in height, maintaining the width so as to scale the image. Saves the result as a gif file&lt;/li&gt;
+&lt;li&gt;&lt;code&gt;fit 640x480 as jpg high progressive&lt;/code&gt; - creates a jpg image that will fit within a 640x480 rectangle and is of high quality with progressive enabled&lt;/li&gt;
+&lt;li&gt;&lt;code&gt;50% as interlaced png&lt;/code&gt; - creates a png with dimensions half of the original&lt;/li&gt;
+&lt;/ul&gt;
+
+&lt;h4&gt;Save Image in Format...&lt;/h4&gt;
+&lt;p&gt;Saves the image in the format specified. Valid formats include:&lt;br /&gt;
+&lt;code&gt;tif, png, gif, bmp, jpg (jpg or jpeg), jpg2 (jpg2 or jpeg2)&lt;/code&gt;&lt;/p&gt;</string>
 		<key>icon</key>
 		<string>com.apple.Preview</string>
 		<key>qsversion</key>
@@ -96,9 +134,6 @@
 		</dict>
 	</dict>
 	<key>QSRequirements</key>
-	<dict>
-		<key>feature</key>
-		<integer>1</integer>
-	</dict>
+	<dict/>
 </dict>
 </plist>
